--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "express": "^4.15.3",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.0",
     "nodemailer": "^4.0.1",
