--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "ngx-quill": "^1.3.3",
     "rxjs": "^5.4.1",
     "typescript": "2.4.0",
     "zone.js": "^0.8.12"
