--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-browser-dynamic": "^4.2.5",
     "@angular/platform-server": "^4.2.5",
     "@angular/router": "^4.2.5",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "ngx-quill": "^1.3.3",
     "rxjs": "^5.4.1",
+    "tether": "^1.4.0",
     "typescript": "2.4.0",
     "zone.js": "^0.8.12"
   },
