--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^7.4.1",
-    "mongojs": "^2.4.0",
+    "mongoose": "^4.11.3",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
+    "passport-jwt": "^2.2.1",
+    "shortid": "^2.2.8"
   },
   "author": "",
   "license": "ISC"
