--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.2.1",
     "ngx-quill": "^1.3.3",
     "rxjs": "^5.4.1",
+    "shortid": "^2.2.8",
     "tether": "^1.4.0",
     "typescript": "2.4.0",
     "zone.js": "^0.8.12"
