--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-server": "^4.2.5",
     "@angular/router": "^4.2.5",
     "angular2-jwt": "^0.2.3",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
