--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.1",
     "@angular/animations": "^4.2.5",
     "@angular/cli": "^1.2.0",
     "@angular/common": "^4.2.5",
