--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.1",
+    "@agm/snazzy-info-window": "^1.0.0-beta.1",
     "@angular/animations": "^4.2.5",
     "@angular/cli": "^1.2.0",
     "@angular/common": "^4.2.5",
@@ -32,6 +33,7 @@
     "ngx-quill": "^1.4.0",
     "rxjs": "^5.4.2",
     "shortid": "^2.2.8",
+    "snazzy-info-window": "^1.1.0",
     "typescript": "2.4.2",
     "zone.js": "^0.8.12"
   },
